# autotool

./: .gitignore  README  TABLES  build-all.sh  build-doc.sh  fortool  fortool.service  fortool.webgui  update-debug.sh
client/: autolat-client.cabal  autotool-client.cabal
client/src/: Happs.hs  Main.hs
collection/: autotool-collection.cabal
collection/src/: Blank.hs  Condition.hs  Fourier_Motzkin.hs  Goto.hs  SOS.hs  While.hs
collection/src/Algebraic/: Integer.hs  Multiset.hs  Nested.hs  Relation.hs  Set.hs
collection/src/Algebraic2/: Central.hs  Class.hs  Config.hs  Instance.hs  Quiz.hs
collection/src/Arithmetic/: Op.hs
collection/src/BDD/: Check.hs  Data.hs  Quiz.hs  Semantics.hs  Top.hs
collection/src/Baum/: Order.hs  Reconstruct.hs  Traverse.hs
collection/src/Binpack/: Instance.hs
collection/src/Boolean/: BDD.hs  Eval.hs  Instance.hs  Op.hs
collection/src/Boolean2/: Instance.hs
collection/src/CNF/: Optimize.hs
collection/src/CSP/: Fail.hs  Property.hs  Roll.hs  STS.hs  Step.hs  Syntax.hs  Trace.hs  Tree.hs
collection/src/Code/: Compress.hs  LZ.hs  Param.hs
collection/src/Compiler/: Goto_While.hs  Normalform.hs  While_Goto.hs
collection/src/Convert/: Input.hs  Type.hs
collection/src/DPLL/: Data.hs  Pattern.hs  Quiz.hs  Roll.hs  Solve.hs  Top.hs  Trace.hs
collection/src/DPLLT/: Data.hs  Pattern.hs  Pigeon.hs  Top.hs  Trace.hs
collection/src/Exp/: Convert.hs  Property.hs  Quiz.hs  Roll.hs  Test.hs
collection/src/Expression/: Op.hs  Reader.hs  Tokens.hs  Type.hs
collection/src/FD/: Data.hs  Roll.hs  Solve.hs  Top.hs  Trace.hs
collection/src/FP/: Arrow.hs  Env.hs  Reconstruct.hs
collection/src/Flow/: Action.hs  Central.hs  Expression.hs  Program.hs  State.hs  Trace.hs  Transit.hs
collection/src/Fourier_Motzkin/: Data.hs  Reader.hs  Solve.hs  ToDoc.hs  Type.hs
collection/src/Fractran/: Machine.hs
collection/src/Fun/: State.hs  Step.hs  Type.hs
collection/src/Geo/: Domain.hs  Pappus.hs  Program.hs  Prover.hs  arnon.gp  brocard.gp  butterfly.gp  feuerbach-tangent.gp  geo-1.gp  geo-2.gp  inkreis.gp  miquel.gp  pappus.gp  pappus3.gp  simson.gp  winkelhalb.gp
collection/src/Goto/: Builtin.hs  Check.hs  Example.hs  Machine.hs  Make.hs  Memory.hs  Property.hs  State.hs  Step.hs  Type.hs
collection/src/Grammatik/: Hierarchie.hs  Property.hs  Type.hs
collection/src/Graph/: Color.hs  Cross.hs
collection/src/Haskell/: Central.hs  Data.hs  SmallCheck.hs
collection/src/Hilbert/: Env.hs
collection/src/Inter/: Collector.hs
collection/src/JVM/: Builtin.hs  Check.hs  State.hs
collection/src/LTL/: Find_Model.hs  Separate.hs
collection/src/Lambda/: Alpha.hs  Apply.hs  Derive.hs  Derive2.hs  IO.hs  Quiz.hs
collection/src/Language/: Grammatik.hs  Sampler.hs  Syntax.hs  Type.hs
collection/src/Lattice/: LLL.hs  Reduce.hs
collection/src/Machine/: Akzeptieren.hs  Class.hs
collection/src/Markov/: Machine.hs  Make.hs  Type.hs
collection/src/NFA/: Convert.hs  Convert_Test.hs  Epsilon.hs  Property.hs  Quiz.hs  Test.hs
collection/src/NPDA/: Konfiguration.hs  Property.hs  Type.hs
collection/src/PL/: Param.hs  Reader.hs  Struktur.hs  ToDoc.hs
collection/src/Palindrom/: Plain.hs
collection/src/Petri/: Deadlock.hs  Dining.hs  Reach.hs  Remote.hs  Type.hs
collection/src/Polynomial/: Base.hs  Class.hs  Common.hs  Data.hs  Euclid.hs  Grobner.hs  Op.hs  Patch.hs  Pattern.hs  Positive.hs  Reader.hs  Test.hs  ToDoc.hs  Type.hs  Unary.hs
collection/src/Prolog/: Eval.hs
db/: .gitignore  autotool-db.cabal  tables.sql
db/src/: Default.hs.sample
interface/: autotool-interface.cabal
interface/src/: Debug.hs  Local.hs
server/: autotool-server.cabal
server-implementation/: autotool-server-implementation.cabal
server-implementation/src/: Main.hs
server-interface/: autotool-server-interface.cabal
server/src/: Main.hs
src/: trial.cabal
src/CSP/: Derive.hs  Property.hs  Roll.hs  STS.hs  Step.hs  Syntax.hs  Trace.hs  Tree.hs
src/Control/: Punkt.hs  Types.hs
src/Convert/: Input.hs  Type.hs
src/Exp/: Convert.hs  Property.hs  Quiz.hs
src/Graph/: Degree.hs
src/Inter/: Collector.hs  Trial.hs
src/NFA/: AI.hs  Analyse.hs  Roll.hs
src/Operate/: Bank.hs  Click.hs  Common.hs  Evaluate.hs  Language.hs  Make.hs  Statistik.hs  Student.hs  Trial.hs  Tutor.hs
src/Petri/: Step.hs
test/: autotool-test.cabal
test/src/: Extract.hs  Run.hs
trial/: autotool-trial.cabal  trial.cabal
yesod/: .ghci  .gitignore  Application.hs  Derive.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs  autotool-yesod.cabal  devel.hs
yesod/Data/: Tuple6.hs
yesod/Handler/: Aufgabe.hs  AufgabeAnlegen.hs  AufgabeBearbeiten.hs  AufgabeBenutzerId.hs  AufgabeBenutzerIdZufall.hs  AufgabeEinstellungen.hs  AufgabeKonfiguration.hs  AufgabeTesten.hs  AufgabeVorlage.hs  AufgabeVorlagen.hs  Aufgaben.hs  AufgabenAktuell.hs  DirektorErnennen.hs  Direktoren.hs  Einsendung.hs  EinsendungAnlegen.hs  Gruppe.hs  GruppeAnlegen.hs  Gruppen.hs  Home.hs  Resultate.hs  ResultatePflicht.hs  Schule.hs  SchuleAnlegen.hs  Schulen.hs  Semester.hs  SemesterAnlegen.hs  Semesters.hs  Server.hs  Servers.hs  Sprache.hs  Statistik.hs  Studenten.hs  TutorErnennen.hs  Tutoren.hs  Vorlesung.hs  VorlesungAnlegen.hs  Vorlesungen.hs  VorlesungenSortiert.hs  Waisenkinder.hs
yesod/Settings/: StaticFiles.hs
yesod/app/: main.hs
yesod/config/: keter.yml.sample  models  mysql.yml  routes  settings.yml
yesod/messages/: de.msg  en.msg
yesod/templates/: aufgabe.hamlet  aufgabeAnlegen.hamlet  aufgabeBenutzerId.hamlet  aufgabeKonfiguration.hamlet  aufgabeVorlagen.hamlet  aufgaben.hamlet  baum.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  einsendung.hamlet  einsendungAnlegen.hamlet  gruppe.hamlet  gruppeAnlegen.hamlet  gruppen.hamlet  home.hamlet  navigation.hamlet  schule.hamlet  schuleAnlegen.hamlet  schulen.hamlet  semester.hamlet  semesterAnlegen.hamlet  semesters.hamlet  server.hamlet  servers.hamlet  statistik.hamlet  studenten.hamlet  studentenFunktion.hamlet  tutoren.hamlet  vorlesung.hamlet  vorlesungAnlegen.hamlet  vorlesungen.hamlet  waisenkinder.hamlet
(+363 files in other folders)
