Name:           autolat-client
Version:        0.0.0
Author:         Bertram Felgenhauer
Maintainer:     Bertram Felgenhauer
Stability:      Experimental
Synopsis:       autolat Xml-RPC client
Description:
  This package is an example client for the autOlat XML-RPC protocol.
Cabal-Version:  >= 1.2
Build-Type:     Simple

Executable autotool-happs
    Main-Is:        Happs.hs
    Hs-Source-Dirs: src
    GHC-Options:    -Wall
    Build-Depends:
        autolib-transport,
        autolib-output,
        autolib-todoc,
        autolib-cgi,
        -- autotool-server,
        SHA ,
        bytestring ,
        haxr,
        mtl,
        dataenc,
        pretty,
        HaXml,
        filepath,
        binary,
        utf8-string,
        happstack-server,
        xhtml,
        base
    Extensions:
        FlexibleInstances
        UndecidableInstances
        GeneralizedNewtypeDeriving

-- Executable autolat-client
--     Main-Is:        Main.hs
--     Hs-Source-Dirs: src
--     GHC-Options:    -Wall
--     Build-Depends:
--         autolib-transport,
--         autolib-output,
--         autolib-todoc,
--         SHA >= 1.4 && < 1.5,
--         bytestring >= 0.9 && < 0.10,
--         haxr >= 3000.7 && < 3000.8,
--         mtl >= 1.1 && < 1.2,
--         dataenc >= 0.11 && < 0.14,
--         pretty >= 1.0 && < 1.1,
--         HaXml >= 1.20 && < 1.21,
--         filepath >= 1.1 && < 1.2,
--         binary >= 0.5 && < 0.6,
--         base >= 4 && < 4.4
--     Extensions:
--         FlexibleInstances
--         UndecidableInstances
--         GeneralizedNewtypeDeriving
