Name:           autotool-collection
Version:        1.3
-- License:        GPL
-- License-File:   LICENSE
Author:         Johannes Waldmann
Maintainer:     Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       E-Assessment
Synopsis:       collection of E-assessment tasks
Description:
  autotool-collection defines the core of autotool: its task types and 
  their semantics.
Stability:      Experimental
Cabal-Version:  >= 1.2
Build-Type:     Simple

Library
    Build-Depends:
        autolib-algorithm,
        autolib-data,
        autolib-dot,
        autolib-exp,
        autolib-fa,
        autolib-foa>=1.1,
        autolib-fta,
        autolib-graph,
        autolib-output,
        autolib-reader,
        autolib-relation,
        autolib-reporter,
        autolib-rewriting,
        autolib-logic,
        autolib-todoc,
        autolib-util,
        autolib-transport,
        autotool-interface,
        base,
        -- hsql,
        -- hsql-mysql,
        random,
        parsec,
        containers,
        -- xhtml,
        -- cgi,
        mtl,
        old-locale,
        old-time,
        process,
        directory,
        unix,
        obdd,
        array,
        pretty,
        utf8-string,
        strict-io, 
        temporary,
        smallcheck, 
        -- http://www.haskell.org/pipermail/haskell-cafe/2013-March/107091.html
        -- QuickCheck < 2.6,
        QuickCheck,
        mueval>=0.8.1.1, hint, haskell-src-exts, syb,
        transformers,
        logict>=0.6.0.2
    GHC-Options:    -Wall -fglasgow-exts -fallow-undecidable-instances
    -- Extensions:
    --     DeriveDataTypeable
    --     MultiParamTypeClasses
    --     TypeSynonymInstances
    --     FlexibleInstances
    --     FlexibleContexts
    --     UndecidableInstances
    --     ScopedTypeVariables
    --     FunctionalDependencies
    --     OverlappingInstances
    --     GADTs
    Hs-source-dirs:
        src 
    Exposed-Modules:
        Inter.Collector
        -- Inter.Crypt
        -- Gateway.Help
        -- Local
        Upload
        -- Debug
        -- Util.Datei
        -- Control.SQL
        -- Control.Time
        -- Control.Time.Typ
        -- Control.Types
        -- Gateway.Help
        -- Mysqlconnect,
                 -- Util.Datei.Base,
    -- cf. http://www.haskell.org/pipermail/haskell-cafe/2013-December/111838.html
    -- other-modules: 
                 Haskell.SmallCheck		    
                 Haskell.Data,
                 Haskell.Central
                 Haskell.Blueprint.Central
                 Haskell.Blueprint.Data
                 Haskell.Blueprint.Match
                 Hilbert.Derivation,
                 Hilbert.Env,
                 Hilbert.Axioms,
                 Hilbert.Syntax,
                 Hilbert.Actions,
                 Hilbert.Central,
                 Hilbert.Param,
                 Rushhour.Central,
                 Rushhour.Data,
                 Rushhour.Move,
                 Algebraic.Relation.Restriction,
                 Algebraic.STGraph,
                 Algebraic.Set,
                 Algebraic.Integer,
                 Algebraic.Central,
                 Algebraic.Class,
                 Algebraic.Config,
                 Algebraic.Instance,
                 Algebraic.Relation,
                 Algebraic.Graph,
                 Algebraic.Nested.Type,
                 Algebraic.Nested.Op,
                 Algebraic.Nested.Restriction,
                 Algebraic.Quiz,
                 Resolution.Roll,
                 Resolution.Enumerate,
                 Resolution.Central,
                 Resolution.Execute,
                 Resolution.Config,
                 Resolution.Action,
                 Resolution.Data,
                 -- Control.Punkt,
                 -- Control.Passwort,
                 -- Control.Time.CGI,
                 -- Control.Time.Typ,
                 -- Control.Gruppe,
                 -- Control.Direktor.DB,
                 -- Control.Direktor.CGI,
                 -- Control.Vorlesung,
                 -- Control.Aufgabe.DB,
                 -- Control.Aufgabe.Typ,
                 -- Control.Stud_Grp.DB,
                 -- Control.Stud_Grp.Typ,
                 -- Control.Admin.DB,
                 -- Control.Admin.CGI,
                 -- Control.Semester,
                 -- Control.Time,
                 -- Control.Gruppe.DB,
                 -- Control.Gruppe.CGI,
                 -- Control.Gruppe.Typ,
                 -- Control.Types,
                 -- Control.Semester.DB,
                 -- Control.Semester.CGI,
                 -- Control.Semester.Typ,
                 -- Control.Tutor.DB,
                 -- Control.Aufgabe,
                 -- Control.Schule.DB,
                 -- Control.Schule.CGI,
                 -- Control.Schule.Typ,
                 -- Control.Stud_Grp,
                 -- Control.Stud_Aufg,
                 -- Control.Stud_Aufg.DB,
                 -- Control.Stud_Aufg.Typ,
                 -- Control.Student.DB,
                 -- Control.Student.CGI,
                 -- Control.Student.Type,
                 -- Control.Vorlesung.DB,
                 -- Control.Vorlesung.CGI,
                 -- Control.Vorlesung.Typ,
                 -- Control.SQL,
                 -- Control.Student,
                 -- Control.Schule,
                 Language,
                 Unify.Main,
                 Unify.Roll,
                 Unify.Config,
                 Unify.Instance,
                 Arithmetic.Op,
                 Program.General.Environment,
                 Program.General.Value,
                 Program.General.Central,
                 Program.General.Class,
                 Program.General.Program,
                 Program.Cexp.Type,
                 Program.Cexp.Annotated,
                 Program.Cexp.Interface,
                 Program.List.Store,
                 Program.List.Roll,
                 Program.List.Value,
                 Program.List.Expression,
                 Program.List.Semantics,
                 Program.List.Operation,
                 Program.List.Config,
                 Program.List.Instance,
                 Program.Array.Operator,
                 Program.Array.Roll,
                 Program.Array.Value,
                 Program.Array.Statement,
                 Program.Array.Expression,
                 Program.Array.Semantics,
                 Program.Array.Config,
                 Program.Array.Instance,
                 Flow.Trace,
                 Flow.Goto.Semantics,
                 Flow.Goto.Data,
                 Flow.Transit,
                 Flow.Conditions,
                 Flow.Expression,
                 Flow.Struct,
                 Flow.Actions,
                 Flow.Central,
                 Flow.Goto,
                 Flow.Struct.Semantics,
                 Flow.Struct.Data,
                 Flow.State,
                 Flow.Auto,
                 Flow.Program,
                 Flow.Action,
                 Flow.Common.Central,
                 Flow.Common.Data,
                 Flow.Common.Semantics,
                 Flow.Common.Shape,
                 Specify.Definition,
                 Specify.Eval,
                 Specify.Expression,
                 Specify.Constraint,
                 Specify.Config,
                 Specify.Check,
                 Specify.Inter,
                 RM.Type,
                 RM.Step,
                 RM.Machine,
                 RM.Make,
                 RM.State,
                 RM.Check,
                 RM.Memory,
                 FP.Reconstruct,
                 FP.Roll,
                 FP.Type,
                 FP.Env,
                 FP.Expression,
                 FP.Instance,
                 FP.Conf,
                 FP.Arrow,
                 FP.Check,
                 FP.Quiz,
                 Peano.Type,
                 Peano.Eval,
                 Peano.Infer,
                 Peano.Machine,
                 Peano.Make,
                 Peano.Data,
                 LCS.Code,
                 LCS.Config,
                 LCS.Instance,
                 LCS.Quiz,
                 LCS.Data,
                 Pump.Conf2,
                 Pump.CF,
                 Pump.Type,
                 Pump.Inter2,
                 Pump.Negativ,
                 Pump.Conf,
                 Pump.Positiv,
                 Pump.CF.Type,
                 Pump.Quiz,
                 Pump.REG,
                 Pump.Inter,
                 Pump.REG.Type,
                 Suggest,
                 Rewriting.Overlap,
                 Rewriting.SRS.Steps,
                 Rewriting.SRS.Step,
                 Rewriting.SRS.Raw,
                 Rewriting.SRS.Apply,
                 Rewriting.Derive,
                 Rewriting.TRS,
                 Rewriting.Apply,
                 Rewriting.Roller,
                 Rewriting.Check,
                 Rewriting.TRS.Steps,
                 Rewriting.TRS.Derive,
                 Rewriting.TRS.Step,
                 Rewriting.TRS.Raw,
                 Rewriting.TRS.Apply,
                 Rewriting.TRS.Numerical,
                 Rewriting.TRS.Machine,
                 Rewriting.TRS.Instance,
                 Rewriting.Derive.Config,
                 Rewriting.Derive.Instance,
                 Rewriting.Derive.Quiz,
                 Algebraic2.Central,
                 Algebraic2.Class,
                 Algebraic2.Config,
                 Algebraic2.Instance,
                 Algebraic2.Quiz,
                 Turing.Nachfolger,
                 Turing.Dot,
                 Turing.Type,
                 Turing.Konfiguration,
                 Turing.Machine,
                 Turing.Property,
                 Turing.Config,
                 Turing.Make,
                 Turing.Check,
                 Turing.Example,
                 RAM,
                 Exp.Shortest_Missing,
                 Exp.Roll,
                 Exp.Test,
                 Exp.Smaller,
                 Exp.Property,
                 Exp.Quiz,
                 Exp.Convert,
                 Boolean.Op,
                 Boolean.Eval,
                 Boolean.Equiv,
                 Boolean.Instance,
                 Boolean.Quiz,
                 Robots3.Nice,
                 Robots3.TH,
                 Robots3.Exact,
                 Robots3.Inverse,
                 Robots3.Generator,
                 Robots3.Config,
                 Robots3.Interface,
                 Robots3.Quiz,
                 Robots3.Hull,
                 Robots3.Data,
                 Robots3.Move,
                 Robots3.Examples,
                 Robots3.Solver,
                 Robots3.Final,
                 Baum.Bin
                 Baum.Traverse
                 Baum.Leftist
                 Baum.Roll
                 Baum.Binary.Ops
                 Baum.Binary.Show
                 Baum.Binary.Type
                 Baum.Reconstruct
                 Baum.Label
                 Baum.Binary
                 Baum.Order
                 Baum.AVL.Ops
                 Baum.AVL.Show
                 Baum.AVL.Type
                 Baum.AVL
                 Baum.BinHeap
                 Baum.RedBlack.Ops
                 Baum.RedBlack.Show
                 Baum.RedBlack.Type
                 Baum.RedBlack
                 Baum.ZweiDrei.Ops
                 Baum.ZweiDrei.Show
                 Baum.ZweiDrei.Type
                 Baum.Heap.Inter
                 Baum.Heap.Op
                 Baum.Heap.Class
                 Baum.Heap.Central
                 Baum.Heap.Generate
                 Baum.Heap.Config
                 Baum.Config
                 Baum.Such.Inter
                 Baum.Such.Op
                 Baum.Such.Class
                 Baum.Such.Central
                 Baum.Such.Generate
                 Baum.Such.Config
                 Baum.BinHeap.Ops
                 Baum.BinHeap.Show
                 Baum.BinHeap.Type
                 Baum.ZweiDrei
                 Baum.Leftist.Ops
                 Baum.Leftist.Show
                 Baum.Leftist.Type
                 Baum.Type
                 Baum.Draw
                 Baum.List
                 Baum.List.Ops
                 Baum.List.Show
                 Baum.List.Type
                 Grammatik.Produktiv,
                 Grammatik.Type,
                 Grammatik.Hierarchie,
                 Grammatik.Reduziert,
                 Grammatik.Ableitung.Config,
                 Grammatik.Akzeptor,
                 Grammatik.Machine,
                 Grammatik.Erreichbar,
                 Grammatik.Property,
                 Grammatik.Config,
                 Grammatik.Ableitung,
                 Grammatik.Check,
                 Grammatik.Zeige,
                 Grammatik.CF.DPL_CYK,
                 Grammatik.CF.CYK_Arrays,
                 Grammatik.CF.Nullable,
                 Grammatik.CF.Epsfrei,
                 Grammatik.CF.Eindeutig,
                 Grammatik.CF.CYK_Tables,
                 Grammatik.CF.Baum,
                 Grammatik.CF.Kettenfrei,
                 Grammatik.CF.Chomsky,
                 Grammatik.CF.Problem.Config,
                 Grammatik.CF.Interface2,
                 Grammatik.CF.Interface,
                 Grammatik.CF.Zeige,
                 Grammatik.CF.Chomsky.Type,
                 Grammatik.CF.Chomsky.Generate,
                 Grammatik.CF.Yeah_Noh,
                 Grammatik.CF.Instance.Config2,
                 Grammatik.CF.Instance.Config,
                 PCProblem.Type,
                 PCProblem.Konfig,
                 PCProblem.Generator,
                 PCProblem.Param,
                 PCProblem.Quiz,
                 PCProblem.Data,
                 PCProblem.Solver,
                 Brainfuck.Env.AdvancedEnv,
                 Brainfuck.Env,
                 Brainfuck.Syntax,
                 Brainfuck.Machine,
                 Brainfuck.Make,
                 Brainfuck.Example,
                 Brainfuck.Syntax.Print,
                 Brainfuck.Syntax.Parse,
                 Brainfuck.Syntax.Data,
                 -- Inter.Click,
                 -- Inter.Logged,
                 -- Inter.Language,
                 -- Inter.Store,
                 -- Inter.Motd,
                 -- Inter.Statistik,
                 -- Inter.Tutor,
                 -- Inter.DateTime,
                 -- Inter.Login,
                 -- Inter.Types,
                 -- Inter.Bank,
                 -- Inter.Param,
                 -- Inter.Make,
                 -- Inter.Crypt,
                 -- Inter.Quiz,
                 -- Inter.Common,
                 -- Inter.Student,
                 -- Inter.Evaluate,
                 Palindrom.Plain,
                 Prime.Factorize,
                 Prime.Check,
                 RAM.Type,
                 RAM.Builtin,
                 RAM.Step,
                 RAM.Machine,
                 RAM.Property,
                 RAM.Make,
                 RAM.State,
                 RAM.Check,
                 RAM.Example,
                 RAM.Memory,
                 Hanoi.Type,
                 Hanoi.Semantik,
                 Hanoi.Config,
                 Hanoi.Quiz,
                 Hanoi.Move,
                 Hanoi.Restriction,
                 CL.Derivation,
                 CL.Combinator,
                 CL.Reader,
                 CL.Term,
                 CL.ToDoc,
                 CL.Data,
                 CL.Substitution,
                 CL.Reduce,
                 CL.Find,
                 RSA.Euclid,
                 RSA.Break,
                 RSA.Param,
                 RSA.Quiz,
                 RSA.Break.Data,
                 Tree,
                 -- Challenger.Ident,
                 -- Challenger.Einsendung,
                 -- Challenger.Partial,
                 NFA.Roll,
                 NFA.Test,
                 NFA.Nerode.Incongruent.Solution,
                 NFA.Nerode.Incongruent.Config,
                 NFA.Nerode.Incongruent.Instance,
                 NFA.Nerode.Incongruent.Check,
                 NFA.Nerode.Incongruent.Quiz,
                 NFA.Nerode.Separation.Solution,
                 NFA.Nerode.Separation.Check,
                 NFA.Nerode.Congruent.Config,
                 NFA.Nerode.Congruent.Instance,
                 NFA.Nerode.Congruent.Check,
                 NFA.Nerode.Congruent.Quiz,
                 NFA.Infinite,
                 NFA.Equiv.Challenger,
                 NFA.Equiv.Generate,
                 NFA.Equiv.Core,
                 NFA.Equiv.Conf,
                 NFA.Property,
                 NFA.Compress.Roll,
                 NFA.Compress.Compressed,
                 NFA.Compress.Look,
                 NFA.Compress.Config,
                 NFA.Compress.Instance,
                 NFA.Compress.Data,
                 NFA.Compress.Inter,
                 NFA.Quiz,
                 NFA.Convert,
                 Prolog.Unify,
                 Prolog.Data,
                 Prolog.Substitution,
                 Machine.Numerical.Type,
                 Machine.Numerical.Config,
                 Machine.Numerical.Make,
                 Machine.Numerical.Inter,
                 Machine.Fun,
                 Machine.Akzeptieren,
                 Machine.Acceptor.Type,
                 Machine.Acceptor.Inter2,
                 Machine.Acceptor.Type2,
                 Machine.Acceptor.Inter,
                 Machine.Var,
                 Machine.Vorrechnen,
                 Machine.Class,
                 Machine.History,
                 Code.Type,
                 Code.Burrows_Wheeler,
                 Code.Measure,
                 Code.Move_To_Front.Work,
                 Code.Move_To_Front.Data,
                 Code.Class,
                 Code.Formal,
                 Code.Nonprefix,
                 Code.Param,
                 Code.Check,
                 Code.Burrows_Wheeler.Work,
                 Code.Burrows_Wheeler.Data,
                 Code.Huffman.Test,
                 Code.Huffman.Throw,
                 Code.Huffman.LR,
                 Code.Huffman.Config,
                 Code.Huffman.Make,
                 Code.Huffman.Boiler,
                 Code.Huffman.Partial,
                 Code.LZ.Book,
                 Code.LZ.Data,
                 Code.Quiz,
                 Code.LZ,
                 Code.Move_To_Front,
                 Code.Nocode,
                 Code.Hamming,
                 Code.Hamming.Check,
                 Code.Hamming.Data,
                 Code.Hamming.Partial,
                 Code.Compress,
                 Blank,
                 Type.Quiz
                 Type.Data
                 Type.Tree
                 Type.Poly.Quiz
                 Type.Poly.Roll
                 Type.Poly.Data
                 Type.Poly.Tree
                 Type.Poly.Check
                 Type.Poly.Infer
                 Type.Check
                 Type.Infer
                 Graph.Util,
                 Graph.TreeWidth,
                 Graph.Bi.Config,
                 Graph.Bi.Proof,
                 Graph.Bi.Quiz,
                 Graph.Bi.Plain,
                 Graph.Degree,
                 Graph.Iso,
                 Graph.Iso.Central,
                 Graph.Iso.Quiz,
                 Graph.Col.Greedy.Central,
                 Graph.Col.Config,
                 Graph.Col.Gadget.Central,
                 Graph.Col.Gadget.Config,
                 Graph.Col.Quiz,
                 Graph.Col.Plain,
                 Graph.VC.Input,
                 Graph.VC.Central,
                 Graph.VC.Param,
                 Graph.VC.ParamSAT,
                 Graph.VC.VCSAT,
                 Graph.VC.SAT,
                 Graph.EDS.Central,
                 Graph.EDS.Param,
                 Graph.TSP.Search,
                 Graph.TSP.Tropic,
                 Graph.TSP.Quiz,
                 Graph.TSP.Plain,
                 Graph.PartialKTree,
                 Graph.MST.Kruskal,
                 Graph.MST.Config,
                 Graph.MST.Quiz,
                 Graph.MST.DSF,
                 Graph.MST.Plain,
                 Graph.Series_Parallel.Type,
                 Graph.Series_Parallel.Op,
                 Graph.Op,
                 Graph.Graceful.Central,
                 Graph.Weighted.Dot,
                 Graph.Weighted.Data,
                 Graph.PartialKTree.Central,
                 Graph.PartialKTree.Config,
                 Graph.PartialKTree.Cliques,
                 Graph.PartialKTree.Quiz,
                 Graph.Cross,
                 Graph.Ramsey,
                 Graph.Cage.Central,
                 Graph.Cage.Config,
                 Graph.Selfcom,
                 Graph.Kreisfrei,
                 Graph.Circle.Config,
                 Graph.Circle.Quiz,
                 Graph.Circle.Plain,
                 Graph.Color,
                 Graph.Van_der_Waerden,
                 Graph.Bisekt.Config,
                 Graph.Bisekt.Quiz,
                 Graph.Bisekt.Data,
                 Graph.Bisekt.Plain,
                 Graph.Way.Input,
                 Graph.Way.Config,
                 Graph.Way.Quiz,
                 Graph.Way.Plain,
                 Graph.Nachbar,
                 Graph.MinSep,
                 Graph.Connected,
                 Graph.Hamilton.Config,
                 Graph.Hamilton.Quiz,
                 Graph.Hamilton.Plain,
                 Graph.Weighted,
                 Graph.Restriction,
                 Turing,
                 JVM,
                 Partition.Roll,
                 Partition.Beispiel,
                 Partition.Central,
                 Partition.Param,
                 Convert.Language,
                 Convert.Type,
                 Convert.Input,
                 Fun.Type,
                 Fun.Step,
                 Fun.Direct,
                 Fun.Create,
                 Fun.Machine,
                 Fun.Cache,
                 Fun.Make,
                 Fun.State,
                 Fun.Check,
                 Fun.Quiz,
                 Fun.Quiz.Type,
                 Fun.Quiz.Type2,
                 Fun.Matrix,
                 Fun.Examples,
                 Fun.Table,
                 Fun.Direct.Config,
                 Binpack.FFD,
                 Binpack.Approximation,
                 Binpack.ParamTH,
                 Binpack.Param,
                 Binpack.Instance,
                 Binpack.Interface,
                 Binpack.Example,
                 Binpack.Quiz,
                 Binpack.InstanceTH,
                 PL.Roll.Syntax
                 PL.Roll.Struktur
                 PL.Data
                 PL.Signatur
                 PL.Interpretation
                 PL.ToDoc
                 PL.Tree
                 PL.Find_Model
                 PL.Reader
                 PL.Struktur
                 PL.Split.Term.Quiz
                 PL.Split.Term.Fixed
                 PL.Semantik
                 PL.Util
                 PL.Param
                 PL.Type
                 Number.Float.To,
                 Number.Float.Roll,
                 Number.Float.From,
                 Number.Float.Config,
                 Number.Float.Near,
                 Number.Float.Data,
                 Number.Wert,
                 Number.Base.Central,
                 Number.Base.Param,
                 Number.Base.Data,
                 Lambda.Basic,
                 Lambda.Position,
                 Lambda.Roll,
                 Lambda.Type,
                 Lambda.Derive,
                 Lambda.Derive2,
                 Lambda.Step,
                 Lambda.IO,
                 Lambda.Backward_Join.Solution,
                 Lambda.Backward_Join.Instance,
                 Lambda.Apply,
                 Lambda.Tree,
                 Lambda.Backward_Join,
                 Lambda.Derive.Config,
                 Lambda.Derive.Instance,
                 Lambda.Quiz,
                 Lambda.Data,
                 Lambda.Alpha,
                 Language.Power,
                 Language.RX,
                 Language.Type,
                 Language.Pali,
                 Language.Genau,
                 Language.Center,
                 Language.Sampler,
                 Language.ABCdiff,
                 Language.Syntax,
                 Language.Mutate,
                 Language.IJK,
                 Language.Grammatik,
                 Language.Lukas,
                 Language.Gleich,
                 Language.Inter,
                 Language.AK,
                 Diffie_Hellman.Break,
                 Diffie_Hellman.Config,
                 Diffie_Hellman.Param,
                 Diffie_Hellman.Quiz,
                 String_Matching.Option,
                 String_Matching.KMP.Semantics,
                 String_Matching.KMP.Central,
                 String_Matching.KMP.Instance,
                 String_Matching.Config,
                 String_Matching.BM.Semantics,
                 String_Matching.BM.Central,
                 String_Matching.BM.Instance,
                 Boolean2.Instance,
                 Boolean2.Quiz,
                 Sortier.Common.Util,
                 Sortier.Common.Config,
                 Sortier.Median.Param,
                 Sortier.Median.Check,
                 Sortier.Programm.Exec,
                 Sortier.Programm.Type,
                 Sortier.Programm.Check,
                 Sortier.Programm.Example,
                 Sortier.Netz.Bild,
                 Sortier.Netz.Type,
                 Sortier.Netz.Xml,
                 Sortier.Netz.Check,
                 Sortier.Netz.Example,
                 Sortier.Netz.Rechnung,
                 Sortier.Merge.Param,
                 Sortier.Merge.Check,
                 KnapsackFraction.Solve,
                 KnapsackFraction.Central,
                 KnapsackFraction.Param,
                 Collatz.Roll,
                 Collatz.Parameter,
                 Collatz.Long,
                 Collatz.Inverse,
                 Collatz.Config,
                 Collatz.Plain,
                 Expression.Op,
                 CNF.Eval,
                 CNF.Form,
                 CNF.Example,
                 CNF.Optimize,
                 JVM.Type,
                 JVM.Builtin,
                 JVM.Step,
                 JVM.Machine,
                 JVM.Make,
                 JVM.State,
                 JVM.Check,
                 JVM.Example,
                 JVM.Memory,
                 Condition,
                 NPDA.Nachfolger,
                 NPDA.Det,
                 NPDA.Dot,
                 NPDA.Type,
                 NPDA.Inter2,
                 NPDA.Beispiel,
                 NPDA.Konfiguration,
                 NPDA.Config2,
                 NPDA.Machine,
                 NPDA.Sane,
                 NPDA.Property,
                 NPDA.Config,
                 NPDA.Check,
                 NPDA.Accept_by,
                 NPDA.Inter,
                 Tree.Dot,
                 Tree.Class,
                 SCS.Config,
                 SCS.Instance,
                 SCS.Quiz,
                 SCS.Data,
                 Upload.Config,
                 Faktor.Times.Param,
                 Faktor.Certify,
                 Faktor.Type,
                 Faktor.Euklid,
                 Faktor.Faktor,
                 Faktor.Prim,
                 Faktor.Euklid.Param,
                 Faktor.Times,
                 Faktor.Inverse,
                 Faktor.Inverse.Param,
                 Faktor.Param,
                 Faktor.Quiz,
                 SAT.Wert,
                 SAT.Types,
                 SAT.Beispiel,
                 SAT.Generator,
                 SAT.Param,
                 SAT.State,
                 SAT.CNF,
                 SAT.SAT,
                 Robots.Nice,
                 Robots.Exact,
                 Robots.Inverse,
                 Robots.Generator,
                 Robots.Config,
                 Robots.Interface,
                 Robots.Quiz,
                 Robots.Hull,
                 Robots.Data,
                 Robots.Move,
                 Robots.Examples,
                 Robots.Solver,
                 Robots.Final,
                 Petri.Dining
                 Petri.Roll
                 Petri.Property
                 Petri.Reach
                 Petri.Dot
                 Petri.Step
                 Petri.Remote
                 Petri.Deadlock
                 Petri.Type
                 CSP.Roll
                 CSP.Property.Right_Linear
                 CSP.Property.Guarded
                 CSP.Property
                 CSP.Syntax
                 CSP.STS
                 CSP.Tree
                 CSP.Step
                 CSP.Derive
                 CSP.Derive.Quiz
                 CSP.Fail.Quiz
                 CSP.Fail.Compute
                 CSP.STS.Roll
                 CSP.STS.Bisi.Refine
                 CSP.STS.Bisi.Central
                 CSP.STS.Bisi.Report
                 CSP.STS.Dot
                 CSP.STS.Semantics.Trace
                 CSP.STS.Type
                 CSP.STS.Fail
                 CSP.Trace
                 LTL.Find_Model
                 LTL.Separate
                 Network.Counting.Data
                 Network.Counting.Semantics
                 Network.Counting.Test
                 Network.Counting.Picture
                 Network.Counting.Top
                 Regular.Type
                 Regular.Top
                 Regular.Logic
                 Regular.Grammatik
                 Up.Central
                 Up.Shape
                 Up.Data
                 Up.Store
                 Up.Exec
                 Up.ToDoc
                 Up.Iso
                 Up.Type
                 Up.Reader
                 BDD.Top      
                 BDD.Quiz          
                 BDD.Check
                 BDD.Data
                 BDD.Semantics
                 Boolean.BDD
                 DPLL.Top
                 DPLL.Data
                 DPLL.Trace
                 DPLL.Solve
                 DPLL.Roll
                 -- DPLL.Pattern
                 SOS
                 SOS.State
                 SOS.Plain
                 SOS.Exp
                 Fourier_Motzkin.Data
                 Fourier_Motzkin.ToDoc
                 Fourier_Motzkin.Reader
                 Fourier_Motzkin.Type
                 Fourier_Motzkin.Solve
                 DPLLT.Top
                 DPLLT.Data
                 DPLLT.Trace
                 FD.Top
                 FD.Data
                 FD.Trace
                 FD.Solve
                 FD.Roll
                 