Name:           autotool-server-interface
Version:        0.3.0
Author:         Bertram Felgenhauer
Maintainer:     Bertram Felgenhauer
Stability:      Experimental
Synopsis:       autotool Xml-RPC server
Description:
  This package provides a common interface
  for autotool-service-implementation (providing autotool.cgi)
  and clients (e.g., autotool-db)
Cabal-Version:  >= 1.2
Build-Type:     Simple

Library 
    Hs-Source-Dirs: src 
    GHC-Options:    -Wall -fglasgow-exts
    Build-Depends:
        autotool-interface,
        autolib-transport,
        autolib-todoc,
        autolib-output,
        autolib-reader,
        autolib-reporter,
        autolib-util,
        SHA,   base, random, bytestring, containers,
        haxr, mtl, parsec,  dataenc, directory, unix,
        process, old-time, utf8-string,
        pretty, HaXml,  filepath,  binary==0.5.1.1,  digest
    Exposed-Modules:
        Util.Hash, Util.Png
        Util.Xml.OutputDTD, Util.Xml.Output
        Types.TaskTree
        Types.Instance
        Types.TaskDescription
        Types.Signed
        Types.Documented
        Types.TT
        Types.Solution
        Types.ServerInfo
        Types.Basic
        Types.Config
        Types.Version
        Types.ScoringOrder
        Types.Description
        Service.Interface

